   * fix a bug with variable substitution time of [event]-within-[event]
   * fix a crash with [ai] in [modify_side]
   * prevent infinite recursion when [kill] fire_event=yes is used to kill
     primary_unit on its own 'die' event (Gna! bug #11207 / Debian bug #448193
   * Optimize titlescreen and credits rendering.
   * Give its name to the "Fog clearer" (fixing blank in "Create Unit" dialog)

Version 1.5.0:
 * campaigns:
   * synchronize all campaign ids with their directory name
   * greatly updated the scenario music playlists in The Rise of Wesnoth,
     Descent into Darkness and The South Guard
   * The Hammer of Thursagan:
     * instead of leadership, the dwarvish loremaster unit line now has a
       similar but unique inspire ability
   * Under the Burning Suns:
     * Minor cosmetic fixes
   * Northern Rebirth:
     * Major WML cleanup and optimisation
     * New respawn mechanism for white mages
   * Liberty:
     * Fix graphic artifact bug #11438
 * Formula AI:
   * added support for Formula AI language, more info available at:
     http://www.wesnoth.org/wiki/FormulaAI
 * graphics:
   * Fixed broken TC on transport-galleon and drake walking corpse graphics
   * New portraits: Elvish Sorceress
   * added a light shadow on the bar of the loading screen
   * new dungeon wall terrain
   * new city-themed village variation
   * new progressive parameter for animations: submerge
   * new progressive parameter for animations: x and y
   * image_diagonal now also works with normal [frame]
   * sub-frames now obey terrain height
   * selecting a poisoned unit now does the selection anim properly
   * convert the render engine to a z-ordered based engine, this allows to 
     have multiple layers and the calculation and rendering are separated
     which means things can be drawn in front of units.
   * removed the now unused tilestack based drawing.
   * added a new experimental gui engine available when starting with