@@ -114,6 +114,7 @@ Version 1.5.0+svn:
      primary_unit on its own 'die' event (Gna! bug #11207 / Debian bug #448193
    * Optimize titlescreen and credits rendering.
    * Give its name to the "Fog clearer" (fixing blank in "Create Unit" dialog)
+   * fix bug with filter + delete savegame (Gna! bug #11779)
 
 Version 1.5.0:
  * campaigns:
